<resources>
    <string name="app_name">Grocy</string>
    <string name="home_empty_text1">Start by Creating Groceries List</string>
    <string name="home_empty_text2">Your Groceries list will shown here.</string>
    <string name="fab_description">Floating Button</string>
    <string name="search_hint">Search Items</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="cook_for_me">Cook For Me</string>
    <string name="add_grocery">Add a Grocery Item</string>
    <string name="dynamic_list">Create a Dynamic Shopping List</string>
    <string name="item_name_title">Item Name</string>
    <string name="item_name_hint">Butter</string>
    <string name="item_quantity_title">Item Quantity</string>
    <string name="item_quantity_hint">9999</string>
    <string name="expiry_date_title">Expiry Date</string>
    <string name="expiry_date_hint">Select expiry date</string>
    <string name="item_price_title">Item Price</string>
    <string name="item_price_hint">9999</string>
    <string name="item_description_title">Description</string>
    <string name="item_description_hint">Enter a Description</string>
    <string name="pop_up_close">Close</string>
    <string name="pop_up_add">Add</string>
    <string name="pop_up_cancel">Cancel</string>
    <string name="pop_up_save">Save</string>
    <string name="pop_up_tryAgain">Try Again</string>
    <string name="error_invalid_input">Invalid Input</string>
    <string name="item_added_success">Item added successfully!</string>
    <string name="error_message">Unable to update. Please try again</string>
    <string name="timeout_message">The operation is taking too long. Please try again.</string>

    <string-array name="quantity_units">
        <item>Kg</item>
        <item>Ct</item>
    </string-array>
</resources>